--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,7 @@
 @import "tailwindcss";
+
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400&display=swap');
+
+/* body {
+    @apply font-product;
+  } */
