--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,29 @@
 body {
     @apply font-product;
   }
+
+  @media screen and (width: 1024px) and (height: 600px) {
+    .hide-on-nest-hub {
+      display: none;
+    }
+  }
+  @media screen and (width: 1280px) and (height: 800px) {
+    .hide-on-nest-hub-max {
+      display: none;
+    }
+  }
+  
+  @media (min-resolution: 120dpi) and (min-width: 1300px) {
+    .hide-on-zoom {
+      display: none;
+    }
+  }
+  @media (max-width: 912px) and (max-height: 1368px) {
+    .footer-icons {
+      width: auto;
+      height: auto;
+      margin: auto;
+    }
+  }
+  
+  
