--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 :root {
-  font-family: "Roboto", Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Product Sans", Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -41,13 +41,13 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
+  padding: 6px 24px;
+  border-radius: 50px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #4889f4;
   cursor: pointer;
   transition: border-color 0.25s;
 }
